# bergamot-translator

./: .clang-format  .clang-format-ignore  .clang-tidy  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile.in  MANIFEST.in  README.md  build-wasm.sh  setup.py
.circleci/: config.yml
.github/: dependabot.yml
.github/workflows/: arm.yml  build.yml  coding-styles.yml  doc.yml  macos-custom-marian-native.yml  macos-custom-marian-wasm.yml  macos.yml  native-custom_marian-mac.yml  native-custom_marian-ubuntu.yml  native-full_marian-mac.yml  native-full_marian-ubuntu.yml  native-mac.yml  native-ubuntu.yml  native.yml  push-browsermt-main-to-mozilla-main.yml  python.yml  ubuntu-custom-marian-wasm.yml  ubuntu.yml  wasm-custom-marian.yml  wasm-custom_marian-mac.yml  wasm-custom_marian-ubuntu.yml  wasm-custom_marian.yml  wasm.yml  windows.yml
app/: CMakeLists.txt  bergamot-translator-app-bytearray.cpp  bergamot-translator-app.cpp  bergamot.cpp  cli-framework.h  cli.h  concurrent-test-app.cpp  main-mts.cpp  main.cpp  marian-decoder-new.cpp  service-cli-bytearray.cpp  service-cli.cpp  testapps.cpp  testapps.h
bindings/python/: CMakeLists.txt  README.md  __init__.py  __main__.py  bergamot-translator.py  bergamot.cpp  bergamot_translator.py  cmds.py  repository.py  test_all.py  translator.py  typing_utils.py  utils.py
bindings/python/tests/: test_all.py  test_html.py
cmake/: GetVersionFromFile.cmake
distilled/: CMakeLists.txt  birnn.cpp  birnn.h  compare_marian_with_deepquest.py  dot_test.py  dp2marian.py  dq2marian.py  main.cpp  run.sh  utils.cpp  utils.h
doc/: CI.md  Unified_API.md  conf.py  index.rst  mainpage.dox  marian-integration.md  marian-integration.rst  python.rst  requirements.txt  wasm-example.md
docker/: Makefile  README.md
docker/wasm/: Dockerfile
examples/: run-native.sh
go/: go.mod  go_bergamot.i
go-client/: go.mod  runme.go
patches/: 01-marian-fstream-for-macos.patch
scripts/: python-test.sh  translate_alpaca.py
scripts/ci/: compiler-hash.sh
src/: AbstractTranslationModel.h  CMakeLists.txt  QualityScore.h  TranslationModel.h  TranslationModelConfiguration.h  TranslationRequest.h  TranslationResult.h
src/tests/: CMakeLists.txt  annotation_tests.cpp  apps.cpp  apps.h  async.cpp  blocking.cpp  cli.cpp  common-impl.cpp  common.cpp  common.h  intgemm-resolve.cpp  native-cli.cpp  native.cpp  tag_tests.cpp  wasm-cli.cpp  wasm.cpp
src/tests/units/: CMakeLists.txt  cache_tests.cpp  html_tests.cpp  html_tests.h  logistic_regressor_qe_tests.cpp  logistic_regressor_quality_estimation_tests.cpp  logistic_regressor_quality_estimator_tests.cpp  logistic_regressor_tests.cpp  quality_estimation_factory_tests.cpp  quality_estimator_factory_tests.cpp  quality_estimator_helper_tests.cpp  quality_estimator_tests.cpp  quality_estimator_tests.h  quality_model_factory_tests.cpp  simple_quality_estimator_tests.cpp  simple_quality_model_tests.cpp  tag_tests.cpp  terminology_tests.cpp  test_helper.h  unsupervised_qe_tests.cpp  unsupervised_quality_estimator_tests.cpp  xh_scanner_tests.cpp
src/translator/: AbstractTranslationModel.cpp  AbstractTranslationModel.h  CMakeLists.txt  TranslationModel.cpp  TranslationModel.h  TranslationModelConfigToOptionsAdaptor.cpp  TranslationModelConfigToOptionsAdaptor.h  TranslationModelConfiguration.h  TranslationRequest.h  TranslationResult.h  adapter.cc  adapter.h  aggregate_batching_pool.cpp  aggregate_batching_pool.h  aligned.h  annotation.cpp  annotation.h  batch.cpp  batch.h  batch_translator.cpp  batch_translator.h  batcher.cpp  batcher.h  batching_pool.cpp  batching_pool.h  bergamot_utils.h  byteArrayExample.cpp  byteArrayExample.h  byte_array_util.cpp  byte_array_util.h  cache.cpp  cache.h  definitions.h  html.cpp  html.h  iquality_estimator.cpp  iquality_estimator.h  iquality_model.h  logging.h  logistic_regressor.cpp  (+80 more)
vcpkg-override/ports/pcre2/: portfile.cmake
wasm/: CMakeLists.txt  README.md  bergamot.html  import-gemm-module.js  node-test.js  patch-artifacts-enable-wormhole.sh  patch-artifacts-import-gemm-module.sh  post-module.js  project_version.js.in
wasm/bindings/: CMakeLists.txt  ServiceBindings.cpp  TranslationModelBindings.cpp  TranslationModelConfigurationBindings.cpp  TranslationRequestBindings.cpp  TranslationResultBindings.cpp  response_bindings.cpp  response_options_bindings.cpp  service_bindings.cpp
wasm/module/: README.md  main.js  package.json  translator-worker.js  translator.js
wasm/module/worker/: translator-worker.js
wasm/test_page/: bergamot-httpserver.js  bergamot.html  bergamot.js  helper.js  index.html  package-lock.json  package.json  start_server.sh  testbench.html  worker.js
wasm/test_page/css/: index.css
wasm/test_page/js/: bergamot-translator-worker.js  html.js  index.js  modelRegistry.js  testbench.js  translator-worker.js  translator.js  worker.js
